@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-05T08:09:48Z",
+  "timestamp" : "2022-06-07T08:14:33Z",
   "count_outdated" : 1562,
   "uniques_outdated" : 88,
-  "count" : 1641,
+  "count" : 1614,
   "uniques" : 99,
   "views" : [
     {
       "timestamp": "2022-05-24T00:00:00Z",
-      "count": 28,
-      "count_minmax": [ 27, 28 ],
+      "count": 1,
+      "count_minmax": [ 1, 28 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
