@@ -1,10 +1,10 @@
 {
-  "count": 79,
+  "count": 52,
   "uniques": 3,
   "views": [
     {
       "timestamp": "2022-05-24T00:00:00Z",
-      "count": 28,
+      "count": 1,
       "uniques": 1
     },
     {
