@@ -1,3 +1,10 @@
+2022-06-07T08:14:33Z:
+* notice: last 14d: unq all: 3 52
+* notice: prev accum: outdated-unq outdated-all / unq all: 88 1562 / 99 1641
+* notice: next accum: outdated-unq outdated-all / unq all: 88 1562 / 99 1614
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -27 / +1 +28 -0 -27 / 1 1
+* notice: removed / changed dates: [] / [2022-05-24]
+
 2022-06-05T08:09:48Z:
 * notice: last 14d: unq all: 3 79
 * notice: prev accum: outdated-unq outdated-all / unq all: 88 1562 / 98 1640
